fixed styling and spacing in globalGym.css, added functionality to ajax.js for changing image in navbar when clicked.

--- a/src/main/resources/static/css/globalGym.css
+++ b/src/main/resources/static/css/globalGym.css
@@ -1,128 +1,148 @@
 
-html {
-    box-sizing: border-box;
+html, body {
+  height: 100%;
+  box-sizing: border-box;
 }
 
 body {
-    background: #515151;
-    color: #FFFFFF;
+  background: #515151;
+  color: #FFFFFF;
+}
+
+#logo {
+  display: inline;
+}
+
+#location-image {
+  width: 100%;
+}
+
+#persons-image {
+  width: 32px;
+  height: 32px;
+}
+
+#persons-selector {
+  display: inline;
+  background-color: rgba(0, 180, 255, 0.66);
 }
 
 a:visited {
-    color: #00B4FF;
+  color: #00B4FF;
 }
 
 /* Main content wrapper */
-.content-wrap {
-    margin-top: 11%;
+#content-wrap {
+  margin-top: 5%;
 }
 
-img {
-    width: 100%;
+#info-card-container {
+  justify-content: center;
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
 }
 
-/* End of content wrapper */
+.info-card {
+  background-color: rgba(0, 180, 255, 0.67);
+  flex-basis: 80%;
+  height: 60%;
+  width: 30%;
+}
 
 .navbar {
-    position: fixed;
-    display: flex;
-    align-items: center;
-    width: 100%;
-    background: transparent;
-    padding: 10px;
+  z-index: 0;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  background: transparent;
+  padding: 10px;
+}
+
+.navbar-item {
+  margin: 2px;
 }
 
 @media (max-width: 650px) {
-    .navbar {
-        flex-wrap: wrap;
-    }
 
-    .content-wrap {
-        margin-top: 60%;
-    }
+  .navbar {
+    flex-wrap: wrap;
+  }
 
-    .bar {
-        flex-wrap: wrap;
-    }
-    .icon {
-        order: 0 !important;
-    }
-    .name {
-        order: 1 !important;
-        width: 100%;
-        margin: 15px;
-    }
-    .search {
-        order: 2 !important;
-        width: 100%;
-    }
+  .bar {
+    height: 5%;
+    flex-wrap: wrap;
+  }
 
-    .search input {
-        width: 30%;
-    }
-}
+  .icon {
+    order: 0 !important;
+  }
 
-/* Custom Navbar */
-*,*:before, *:after {
-    box-sizing: inherit;
+  .name {
+    order: 1 !important;
+    width: 100%;
+    margin: 15px;
+  }
+
+  .search {
+    order: 2 !important;
+    width: 100%;
+  }
+
+  /*.search input {*/
+    /*width: 30%;*/
+  /*}*/
 }
 
 .bar {
-    position: fixed;
-    display: flex;
-    align-items: center;
-    width: 100%;
-    background-color: rgba(0,0,0,0.5);
-    top: 0;
-    padding: 10px;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  background-color: rgba(0,0,0,0.5);
+  top: 0;
+  padding: 10px;
 }
 
 .search {
-    flex: 1;
+  flex: 1;
 }
 .search input {
-    width: 70%;
+  width: 70%;
 }
-/* End of Navbar */
 
-/*.nav-links {*/
-    /*float: right;*/
-    /*display: block;*/
-    /*text-align: center;*/
-    /*padding: 7px 8px;*/
-/*}*/
-
-/* Map Stuff */
 .map-wrap {
-    margin-left: auto;
-    margin-right: auto;
-    width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
 }
 
 #map {
-    background-color: azure;
-    border-radius: 50%;
-    height: 400px;
-    width: 400px;
+  z-index: 1;
+  background-color: azure;
+  border-radius: 5%;
+  height: 80%;
+  width: 80%;
 }
 
 /* End of Map */
 
 .test{
-    display: flex;
-    border: 1px solid #FFFFFF;
-    margin-top: 30px;
+  display: flex;
+  border: 1px solid #FFFFFF;
+  margin-top: 30px;
 }
 
 .text-test {
-    display: inline-flex;
-    text-align: center;
-    margin-top: 30px;
+  display: inline-flex;
+  text-align: center;
+  margin-top: 30px;
 
 }
 
 footer{
-    display: flex;
-    align-items: center;
-    width: 100%;
+  display: flex;
+  align-items: center;
+  width: 100%;
 }
