--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,34 +1,32 @@
 body, html{
-    background-image: url("/img/road-map-login.jpg");
-    background-size: cover;
+  background-image: url("../img/road-map-login.jpg");
+  background-size: cover;
 }
 
 #loginHeader{
-    font-family: 'Monoton', cursive;
-    font-size: 3em;
+  font-family: 'Monoton', cursive;
+  font-size: 3em;
 }
 
 #username{
-
-    border-radius: 2px;
-    background-color: #515151;
-    color: white;
+  border-radius: 2px;
+  background-color: #515151;
+  color: white;
 }
 
-
 #password{
-    border-radius: 2px;
-    background-color: #515151;
-    color: white;
+  border-radius: 2px;
+  background-color: #515151;
+  color: white;
 }
 
 #usernameLbl{
-    font-size: 15px;
+  font-size: 15px;
 }
 
 
 #passwordLbl{
-    font-size: 15px;
+  font-size: 15px;
 }
 
 
@@ -38,23 +36,23 @@ body, html{
 /*color: white;*/
 /*}*/
 
-
 .semi-transparent-button {
-    display: block;
-    box-sizing: border-box;
-    margin: 0 auto;
-    padding: 8px;
-    width: 80%;
-    max-width: 200px;
-    background: #fff; /* fallback color for old browsers */background: rgba(255, 255, 255, 0.1);
-    border-radius: 5px;
-    color: #fff;
-    text-align: center;
-    text-decoration: none;
-    letter-spacing: 1px;
-    transition: all 0.3s ease-out;
-    position: relative;
-    top: 145px;
+  display: block;
+  box-sizing: border-box;
+  margin: 0 auto;
+  padding: 8px;
+  width: 80%;
+  max-width: 200px;
+  background: #fff; /* fallback color for old browsers */
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 5px;
+  color: #fff;
+  text-align: center;
+  text-decoration: none;
+  letter-spacing: 1px;
+  transition: all 0.3s ease-out;
+  position: relative;
+  top: 145px;
 }
 
 #moveFldsDiv{
@@ -67,18 +65,18 @@ body, html{
 /*}*/
 
 #titleLbl{
-    margin-left: 450px;
-    margin-top: 50px;
+  margin-left: 450px;
+  margin-top: 50px;
 }
 
 .error{
-    color: red;
-    font-size: large;
+  color: red;
+  font-size: large;
 }
 
 #errorDiv{
-    margin-top: 160px;
-    margin-left: -90px;
+  margin-top: 160px;
+  margin-left: -90px;
 }
 
 
